--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3543,3 +3543,15 @@ msgstr "Update"
 
 msgid "workspace.viewport.click-to-close-path"
 msgstr "Click to close the path"
+
+msgid "workspace.isolation.selection"
+msgstr "Selection"
+
+msgid "workspace.isolation.isolate-mode"
+msgstr "Isolate mode"
+
+msgid "workspace.isolation.isolate-on"
+msgstr "Isolate on"
+
+msgid "workspace.isolation.isolate-off"
+msgstr "Isolate off"
